--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,11 +62,31 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      /*transition: all 0.05s;*/
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+    const hourHand = document.querySelector(".hour-hand");
+    const minHand = document.querySelector(".min-hand");
+    const secondHand = document.querySelector(".second-hand");
+
+    function setDate() {
+      const time = new Date();
+      const hours = time.getHours();
+      const minutes = time.getMinutes();
+      const seconds = time.getSeconds();
+
+      hourHand.setAttribute("style", `transform: rotate(${(hours / 12) * 360 + ((minutes/60)*30)+ 90}deg)`);
+      minHand.setAttribute("style", `transform: rotate(${(minutes / 60) * 360 + 90}deg)`);
+      secondHand.setAttribute("style", `transform: rotate(${(seconds / 60) * 360 + 90}deg)`);
+    };
+
+    setInterval(setDate, 1000);
 
 
   </script>
