--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,9 +22,24 @@
 
   <style>
 
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     body {
       text-align: center;
@@ -42,9 +57,22 @@
     input {
       width: 100px;
     }
+
   </style>
 
   <script>
+
+    const inputs = document.querySelectorAll('input');
+
+    const handleChange = (event) => {
+      const suffix = event.target.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${event.target.name}`, event.target.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleChange));
+    inputs.forEach(input => input.addEventListener('mousemove', handleChange));
+
+
   </script>
 
 </body>
