--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,6 +31,14 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const invFilter = (inv) => {
+      if (inv.year > 1500 && inv.year < 1600) {
+        return true;
+      }
+      return false;
+    };
+    const filter = inventors.filter(invFilter);
+    console.log(filter);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
