--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -66,6 +66,10 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const nameSort = people.sort((a, b) => {
+      a - b
+    });
+
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
