--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,7 +15,39 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  const cities = [];
+
+  fetch(endpoint)
+  .then(response => response.json())
+  .then(data => cities.push(...data));
+
+  function findMatches(wordToMatch, cities) {
+    return cities.filter(item => {
+      const regex = new RegExp(wordToMatch, 'gi')
+      return item.city.match(regex) || item.state.match(regex);
+    });
+  };
+
+  // console.log(cities);
+  console.log(findMatches("Bos", cities));
+
+  // const searchBar = document.querySelector('.search');
+
+  // const search = (event) => {
+  //   const input = searchBar.value;
+  //   const answers = [];
+  //   cities.forEach((item) => {
+  //     if (item.city === input) {
+  //       answers.push(item);
+  //     };
+  //   });
+  //   answers;
+  //   console.log(answers);
+  // };
+
+  // searchBar.addEventListener('keyup', search);
 
 </script>
 </body>
