--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,26 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    console.log('should be true:');
+    console.log(people.some((person) => (2020 - person.year > 19)));
     // Array.prototype.every() // is everyone 19 or older?
+    console.log('should be false:');
+    console.log(people.every((person) => (2020 - person.year > 19)));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    console.log(comments.find(comment => comment.id === 823423));
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(comment => comment.id === 823423);
+    const newArray = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+    console.log(newArray);
 
   </script>
 </body>
